compiler/testData/diagnostics/tests/subtyping/kt2744.kt
// FIR_IDENTICAL
class X : <!UNRESOLVED_REFERENCE!>S<!>

fun f(l: List<X>) {}
